testcases/error/invalid_mixin_parameterized.veryl
interface invalid_mixin_parameterized_source #(
    param A: u32 = 1,
) {}
interface invalid_mixin_parameterized {
    mixin invalid_mixin_parameterized_source;
}
